# bread-crumbs-contracts

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  TODO.md  library.json  library.properties
.github/workflows/: ci.yml  release.yml
cmake/: breadCrumbsContractsConfig.cmake.in
docs/: capabilities.md  capability-implementation-plan.md  capability-oriented-contract-policy.md  compatibility-matrix.md  compatibility.md  contract-model.md  controller-compatibility.md  generation-contract-strategy.md  overview.md  protocol-versioning.md  type-id-registry.md  type-ids.md  versioning.md
examples/: README.md
examples/controller_discovery/: CMakeLists.txt  README.md  main.c
examples/controller_manual/: CMakeLists.txt  README.md  config.h  main.c
include/bread/: bread_caps.h  bread_ops.h  bread_version_helpers.h  bread_watchdog.h  dcmt_ops.h  rlht_ops.h
tests/compile_smoke/: README.md  smoke.c
tests/installed_package_consumer/: CMakeLists.txt  main.c
